public/main.css
/* ... */
    @media (min-width: 600px) {
      .show-test:before {
        content: "med"; } }
    @media (min-width: 980px) {
      .show-test:before {
        content: "lg"; } }
    @media (min-width: 1280px) {
      .show-test:before {
        content: "xl"; } }

/* montserrat-regular - latin */
html,
body {
  -webkit-user-select: none;
  -webkit-touch-callout: none;
  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  background-color: var(--color-bg);
  font-size: var(--base-font-size); }

.w-50 {
  width: 50%; }

body,
html {
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0; }

body.font-size-xs {
  --base-font-size: 90%;
  font-size: var(--base-font-size); }

body.font-size-sm {
  --base-font-size: 100%;
  font-size: var(--base-font-size); }

body.font-size-md {
  --base-font-size: 110%;
  font-size: var(--base-font-size); }

body.font-size-lg {
  --base-font-size: 120%;
  font-size: var(--base-font-size); }

body.mint {
  --color-primary-bright: var(--color-mint-bright);
  --color-primary: var(--color-mint); }

body.teal {
  --color-primary-bright: var(--color-teal-bright);
  --color-primary: var(--color-teal); }

body.purple {
  --color-primary-bright: var(--color-purple-bright);
  --color-primary: var(--color-purple); }

body.orange {
  --color-primary-bright: var(--color-orange-bright);
  --color-primary: var(--color-orange); }

body.pink {
  --color-primary-bright: var(--color-pink-bright);
  --color-primary: var(--color-pink); }

body {
  overflow: hidden;
  --header-height: 56px;
  --color-darkest: #fff;
  --color-darkest-translucent: rgba(255, 255, 255, 0.89);
  --color-bg: rgba(240, 240, 240);
  --space-gap: 8pt;
  --color-input-background: rgba(0, 0, 0, 0.1);
  --tracker-background: #fff;
  --color-inverse: #333;
  --color-inverse-1: #555;
  --color-inverse-2: #777;
  --color-inverse-3: #999;
  --color-solid: #fff;
  --color-white: #fff;
  --color-solid-half: #f8f8f8;
  --color-solid-1: #eee;
  --color-solid-2: rgb(223, 223, 223);
  --color-solid-3: #666;
  --color-primary: #20699d;
  --tabs-background: var(--color-primary);
  --color-primary-muted: #4d84a1;
  --color-primary-dark: #1a212a;
  --color-primary-faded: rgba(50, 159, 215, 0.45);
  --color-primary-bright: #319ed7;
  --color-blue: #0a7bab;
  --color-orange: #ed9614;
  --color-green: #38a83f;
  --color-red: #e94151;
  --color-mint-bright: #1fb182;
  --color-mint: #1fb182;
  --color-teal-bright: #10c4b5;
  --color-teal: rgb(25, 156, 115);
  --color-purple-bright: #b900f1;
  --color-purple: #a705d8;
  --color-orange-bright: #ef8354;
  --color-orange: #ef8354;
  --color-pink-bright: #ff499e;
  --color-pink: #ff499e;
  --color-tabs: var(--color-primary);
  --color-faded: rgba(0, 0, 0, 0.06);
  --color-faded-inverse: rgba(255, 255, 255, 0.06);
  --color-faded-1: rgba(0, 0, 0, 0.15);
  --color-faded-2: rgba(0, 0, 0, 0.3);
  --color-faded-3: rgba(0, 0, 0, 0.4);
  --color-full-screen: rgba(0, 0, 0, 0.7);
  --color-background-selected: rgba(32, 105, 157, 0.1);
  --color-translucent: rgba(255, 255, 255, 0.89);
  --color-translucent-1: rgba(255, 255, 255, 0.1);
  --color-translucent-inverse: rgba(0, 0, 0, 0.79);
  --input-background: #eee;
  --input-focus-background: #fff;
  --color-grey-0: rgb(5, 5, 5);
  --color-grey-1: rgb(25, 25, 25);
  --color-grey-2: rgb(50, 50, 50);
  --color-grey-3: rgb(75, 75, 75);
  --color-grey-4: rgb(100, 100, 100);
  --color-grey-5: rgb(125, 125, 125);
  --color-grey-6: rgb(220, 220, 220);
  --color-grey-7: rgb(230, 230, 230);
  --color-grey-8: rgb(240, 240, 240);
  --color-grey-9: rgb(245, 245, 245);
  --color-grey-10: rgb(250, 250, 250);
  --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
  --box-shadow: 0 7px 10px -4px rgba(0, 0, 0, 0.1), 0 8px 16px -4px rgba(0, 0, 0, 0.1), 0 -1px 2px rgba(0, 0, 0, 0.09);
  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
  --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
  --box-shadow-inset-huge: inset 0px 0px 70px rgba(0, 0, 0, 0.2);
  --header-background: #fff;
  --modal-border: solid 1px rgba(0, 0, 0, 0.12);
  --header-fade: linear-gradient(
    180deg,
    rgba(255, 255, 255, 1) 35%,
    rgba(255, 255, 255, 0.5886729691876751) 76%,
    rgba(255, 255, 255, 0) 100%
  );
  --footer-fade: linear-gradient(180deg, rgba(240, 240, 240, 0) 10%, rgba(240, 240, 240, 0.9) 30%, rgba(240, 240, 240, 1) 100%);
  --footer-background: rgba(254, 254, 254, 1); }

body.test * {
  border: solid 1px rgba(255, 0, 0, 0.6) !important; }

.bold {
  font-weight: bold; }

body {
  background-color: var(--color-bg); }
  body .main-content:before {
    bottom: -50px;
    left: 0;
    right: 0;
    content: "";
    transition: all 0.2s ease-in-out;
    position: fixed;
    background-color: transparent; }

.hider {
  height: 0;
  width: 0;
  overflow: hidden;
  opacity: 0;
  position: fixed;
  bottom: -10px;
  right: -20px; }

.fill-header {
  background-color: var(--color-grey-9); }

.box-shadow-float {
  box-shadow: var(--box-shadow-float); }

.box-shadow-tight {
  box-shadow: var(--box-shadow-tight); }

.box-shadow {
  box-shadow: var(--box-shadow); }

.box-shadow-off {
  box-shadow: none !important; }

.box-shadow-inset-huge {
  box-shadow: var(--box-shadow-inset-huge); }

body.hidden {
  background-color: var(--color-primary);
  display: flex !important;
  justify-content: center;
  align-content: center;
  height: 100vh; }
  body.hidden:after {
    content: "";
    background-image: url(images/nomie-white-type.png);
    display: block;
    width: 200px;
    height: 40px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    justify-self: center;
    align-self: center; }
/* ... */

